--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,26 +24,20 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
+.header nav {
+    padding-top: 0px;
+    margin-right: 10px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
 
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
-}
-
-a {
+nav a {
     color: #ffffff;
     text-decoration: none;
+    display: inline-block;
+    margin: 25px;
 }
 
 p {
